examples/checker_tests/good/shift-int-by-bit.p4
control C() {
    const int x = 6 >> 8w1;
    apply {
    }
}
