examples/checker_tests/bad/cast-across-widths.p4
int<8> bad_cast(bit<9> x) {
    return (int<8>)x;
}